RANGER-2203, RANGER-2219: Review and update database schema for ranger policies and tag objects to minimize database queries/updates